crates/ir/tests/snapshots/lower_test__extern__extern_constructor_throws.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module extern__extern_constructor_throws

extern java "java.io.FileInputStream" new(String) -> Result[String, ~JFileInputStream]
extern type java "java.io.FileInputStream" JFileInputStream
import core/peek/peek as peek(h) -> h
import core/list/last as last(List[u3]) -> Option[u3]
import core/list/sort_by as sort_by(List[z5], (z5) -> o5) -> List[z5]
import core/list/filter as filter(List[j1], (j1) -> Bool) -> List[j1]
import core/list/fold as fold(List[w1], y1, (y1, w1) -> y1) -> y1
import core/list/map as map(List[y], (y) -> a1) -> List[a1]
import core/vec/to_list as to_list(Vec[c8]) -> List[c8]
import core/io/println as println(m) -> Unit
import core/option/Some as Some(e) -> Option[e]
import core/result/Ok as Ok(g) -> Result[f, g]
import core/result/Err as Err(f) -> Result[f, g]
import core/list/Cons as Cons(h, List[h]) -> List[h]
declare new: (String) -> Result[String, ~JFileInputStream]
declare println: (m) -> Unit

fn main() -> Unit =
  let v0: Result[String, ~JFileInputStream] = call new("/nonexistent")
  switch v0 {
    0 (v1: h) ->
      let v2: Dict[core/show.Show, String] = get_dict core/show.Show[String]
      let v3: Unit = call println(v2, "ok")
      v3
    1 (v4: g) ->
      let v5: Dict[core/show.Show, String] = get_dict core/show.Show[String]
      let v6: Unit = call println(v5, "caught error")
      v6
  }
