crates/ir/tests/snapshots/lower_test__extern__extern_java_type.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module extern__extern_java_type

extern java "krypton.runtime.KryptonActors" raw_send(Ref[Int], Int) -> Unit
extern type java "krypton.runtime.Ref" Ref
import core/peek/peek as peek(h) -> h
import core/list/last as last(List[u3]) -> Option[u3]
import core/list/sort_by as sort_by(List[z5], (z5) -> o5) -> List[z5]
import core/list/filter as filter(List[j1], (j1) -> Bool) -> List[j1]
import core/list/fold as fold(List[w1], y1, (y1, w1) -> y1) -> y1
import core/list/map as map(List[y], (y) -> a1) -> List[a1]
import core/vec/to_list as to_list(Vec[c8]) -> List[c8]
import core/io/println as println(k) -> Unit
import core/option/Some as Some(e) -> Option[e]
import core/result/Ok as Ok(g) -> Result[f, g]
import core/result/Err as Err(f) -> Result[f, g]
import core/list/Cons as Cons(h, List[h]) -> List[h]
declare raw_send: (Ref[Int], Int) -> Unit

fn use_ref(v0: Ref[Int]) -> Ref[Int] =
  v0

fn send_msg(v1: Ref[Int], v2: Int) -> Unit =
  let v3: Unit = call raw_send(v1, v2)
  v3
