crates/ir/tests/snapshots/lower_test__extern__extern_method_type_params_explicit.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module extern__extern_method_type_params_explicit

extern java "krypton.runtime.KryptonIO" identity(a8) -> a8
extern java "krypton.runtime.KryptonIO" raw_println(b8) -> Unit
import core/peek/peek as peek(e) -> e
import core/list/last as last(List[r3]) -> Option[r3]
import core/list/sort_by as sort_by(List[w5], (w5) -> l5) -> List[w5]
import core/list/filter as filter(List[g1], (g1) -> Bool) -> List[g1]
import core/list/fold as fold(List[t1], v1, (v1, t1) -> v1) -> v1
import core/list/map as map(List[v], (v) -> x) -> List[x]
import core/vec/to_list as to_list(Vec[z7]) -> List[z7]
import core/io/println as println(h) -> Unit
import core/option/Some as Some(c) -> Option[c]
import core/result/Ok as Ok(e) -> Result[d, e]
import core/result/Err as Err(d) -> Result[d, e]
import core/list/Cons as Cons(f, List[f]) -> List[f]
